# cntmosaic

./: .gitignore  DEVELOPMENT_PLAN_V1.md  README.md  README.rst  codecov.yml  environment.yml  log.txt  pyproject.toml  requirement_hpc.txt  requirements.txt  requirements_hpc.txt  test.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cntmosaic/: __init__.py  _types.py  math_utils.py  numpyro_utils.py  simulations.py
cntmosaic/analysis/: __init__.py  _arviz.py  _evaluator.py  _stats.py  _summariser.py  _utils.py  _visualiser.py
cntmosaic/analysis/evaluator/: _ModelEvaluatorBRC.py  _ModelEvaluatorPrem.py  _ModelEvaluatorSocialMix.py  __init__.py  _base.py
cntmosaic/analysis/summariser/: _ModelSummariser.py  _ModelSummariserBRC.py  _ModelSummariserPrem.py  _ModelSummariserSocialMix.py  __init__.py  _summary.py
cntmosaic/analysis/tests/: test_evaluator_brc.py  test_lazy_imports.py  test_summariser.py  test_summariser_brc.py  test_summariser_prem.py
cntmosaic/dataloader/: README.md  _BaseLoader.py  _ColumnSpec.py  _ContactSurveyLoader.py  _CoordToColumns.py  _DataFrameSurveySource.py  _DataLoader.py  _DataValidator.py  __init__.py  _dataloader.py  _observation.py  _stratification.py  _utils.py  loaders.py  restru_loaders.py
cntmosaic/dataloader/containers/: README.md  _ContactData.py  _ModelData.py  _ParticipantData.py  _PopulationData.py  _StratPropData.py  _StratificationData.py  (+9 more)
cntmosaic/datasets/: __init__.py  _base.py
cntmosaic/distributions/: _IGMRF.py  _IGMRF2D.py  _QuasiNegBin.py  _QuasiPoisson.py  _SymIGMRF2D.py  __init__.py
cntmosaic/models/: README.md  _AgeMixCC.py  _AgeMixFC.py  _AgeMixFF.py  _BRC.py  _BRCBase.py  _BRCFine.py  _BRCFineAge.py  _BRCfine.py  _BRCrefine.py  _GenMix.py  _GenMixCC.py  _GenMixFC.py  _GenMixFF.py  _HiBRCFine.py  _HiBRCFineAge.py  _HiBRCfine.py  _HiBRCrefine.py  _Prem.py  _SocialMix.py  __init__.py  _backend.py  _base.py  _inference.py  _math.py  _numpyro.py  _priors.py  _socialmix_age_processing.py  _socialmix_bootstrap.py  _socialmix_utils.py  _socialmix_validation.py  _utils.py  _vdKassteele.py  custom.py  restr_BRCfine.py  restr_BRCrefine.py
cntmosaic/preprocess/: __init__.py  _preprocess.py  _utils.py
cntmosaic/sim/: _ContactGenerator.py  _ContactMatrixGenerator.py  _MatrixGenerator.py  _ParticipantGenerator.py  _PopulationConstructor.py  _Stratification.py  _Subgroup.py  __init__.py  _eval.py  _sim.py  _utils.py  eval.py  patterns.py  utils.py  visuals.py
cntmosaic/tutorial/: BetaNegativeBinom.ipynb  HiBRCfine.ipynb  Prem.ipynb  cntmosaic_getting_started.ipynb  coarse_age.ipynb  example.ipynb  germany.ipynb  sample_prop.csv  vdKassteele.ipynb
cntmosaic/utils/: _AgeBins.py  _AgeGroupSpecs.py  __init__.py  _matrix_utils.py  _tutorial_utils.py  _utils.py  inference.py  model.py  prior.py
cntmosaic/vis/: __init__.py  _utils.py  _visuals.py
cntmosaic/visuals/: __init__.py  _visuals.py
conf/: config.yaml
conf/mcmc/: medium.yaml  short.yaml  test.yaml
data/polymod/: contacts.csv  fine_age.csv  participants.csv
docs/: README.md  requirements.txt
docs/dev_docs/: dev_plan.md  dev_plan_priors.md
docs/source/: conf.py  index.rst
hpc/: run_sim.bash  run_sim_gpu.bash  run_sim_omp.bash
hpc/sim/: BRCFineAge.bash
notebooks/: hsgp_2d_vanilla.ipynb  hsgp_vanilla.ipynb  preproc_polymod.ipynb  simulate_data.ipynb  simulation_study_basic.ipynb  simulation_study_ses.ipynb  synthetic_data.ipynb  test_brc_basic.ipynb  test_brc_stratified.ipynb  test_numpyro.ipynb
scripts/: get_polymod_data.R  run_sim.py  run_sim_gpu.py  test_brc_basic.py
scripts/sim/: BRCFineAge.py
src/: hsgp1d.py  math.py  model_utils.py  models.py  numpyro_utils.py  simulations.py  visuals.py
tutorials/: README.md  Tutorial_BRCfine.ipynb  Tutorial_HiBRCfine.ipynb  Tutorial_Model_Selection.ipynb  Tutorial_Prem.ipynb  Tutorial_SocialMix.ipynb  Tutorial_Synthetic_Data.ipynb  Tutorial_vdKassteele.ipynb  generate_contact_data.ipynb
(+151 files in other folders)
