[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Shozen Dan", email = "shozen.dan21@imperial.ac.uk"},
  {name = "Yiming Lin"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "A Python package for modelling, simulating, and visualising social contact data."
name = "cntmosaic"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

dependencies = [
  # Core numerical computing
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "pandas>=1.3.0", # JAX ecosystem
  "jax>=0.4.10",
  "jaxlib>=0.4.10",
  "numpyro>=0.13.0", # Data structures and arrays
  "xarray>=0.19.0", # Bayesian analysis and visualization
  "arviz>=0.18.0", # Optimization
  "optax>=0.1.0", # Progress bars
  "tqdm>=4.60.0", # Machine learning utilities
  "scikit-learn>=1.0.0", # Visualization
  "matplotlib>=3.4.0",
  "altair>=4.2.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=3.0.0",
  "pytest-xdist>=2.5.0",
  "black>=22.0.0",
  "flake8>=4.0.0",
  "mypy>=0.950",
  "pre-commit>=2.17.0",
  "ipython>=8.0.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.0.0",
]

# Documentation dependencies
docs = [
  "sphinx>=4.5.0",
  "sphinx-rtd-theme>=1.0.0",
  "sphinx-autodoc-typehints>=1.18.0",
  "nbsphinx>=0.8.8",
  "pandoc>=2.0.0",
  "myst-parser>=0.18.0",
]

# GPU support (CUDA 12)
cuda12 = [
  "jax[cuda12]>=0.4.10",
]

# GPU support (CUDA 11)
cuda11 = [
  "jax[cuda11]>=0.4.10",
]

# Visualization extras
viz = [
  "seaborn>=0.11.0",
  "plotly>=5.0.0",
]

# All optional dependencies
all = [
  "cntmosaic[dev,docs,viz]",
]

[project.urls]
Documentation = "https://cntmosaic.readthedocs.io"
Homepage = "https://github.com/ShozenD/cntmosaic"
Issues = "https://github.com/ShozenD/cntmosaic/issues"
Repository = "https://github.com/ShozenD/cntmosaic.git"

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
minversion = "7.0"
pythonpath = [
  ".",
]
testpaths = [
  "cntmosaic/*/tests",
]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
]
source = ["cntmosaic"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
